//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table algorithm_session {
  id String [pk]
  isPublic Boolean [not null]
  password String
  name String [not null]
  quiz String
  createdAt DateTime [default: `now()`, not null]
  chats algorithm_chat [not null]
  participants algorithm_session_participant [not null]
}

Table algorithm_session_participant {
  id Int [pk, increment]
  sessionId String [not null]
  userId String [not null]
  isAdmin Boolean [not null, default: false]
  code String [not null]
  answerDeclared Boolean [not null]
  createdAt DateTime [default: `now()`, not null]
  session algorithm_session [not null]
  user user [not null]
  chats algorithm_chat [not null]

  indexes {
    (sessionId, userId) [unique]
  }
}

Table algorithm_chat {
  id Int [pk, increment]
  sessionId String [not null]
  participantId Int [not null]
  message String [not null]
  createdAt DateTime [default: `now()`, not null]
  participant algorithm_session_participant [not null]
  AlgorithmSession algorithm_session
}

Table todo_list_todo {
  id Int [pk, increment]
  title String [not null]
  text String [not null]
  userId String [not null]
  dueAt DateTime [not null]
  completedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user user [not null]
}

Table www_post {
  id Int [pk, increment]
  title String [not null]
  text String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user user [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user user [not null]
}

Table user {
  id String [pk]
  name String [not null]
  email String [unique]
  emailVerified DateTime
  image String
  color String [not null]
  accounts account [not null]
  sessions session [not null]
  todolistTodos todo_list_todo [not null]
  algorithmSessions algorithm_session_participant [not null]
}

Table verification_token {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Ref: algorithm_session_participant.sessionId > algorithm_session.id [delete: Cascade]

Ref: algorithm_session_participant.userId > user.id [delete: Cascade]

Ref: algorithm_chat.participantId > algorithm_session_participant.id [delete: Cascade]

Ref: algorithm_chat.sessionId > algorithm_session.id

Ref: todo_list_todo.userId > user.id [delete: Cascade]

Ref: account.userId > user.id [delete: Cascade]

Ref: session.userId > user.id [delete: Cascade]